# albert-challenge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini
.github/workflows/: base.yml  ci.yaml
src/: app.py  exceptions.py  routes.py
src/crypto/: __init__.py  base64_encoder.py  crypto_service.py  hmac_signer.py  signer.py
src/crypto/encoder/: __init__.py  base64_encoder.py  encoder.py
src/crypto/signer/: __init__.py  hmac_signer.py
src/routes/: encode.py  sign.py
tests/: test_api_error.py  test_app.py  test_decrypt.py  test_encrypt.py  test_sign.py  test_verify.py
